# sea-query-reexport-min-repro

./: .gitignore  Cargo.toml
common/: Cargo.toml
test-project/: Cargo.toml
test-project/src/: main.rs
