[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1.6.1", features = [ "macros", "rt-multi-thread" ] }
tokio = { version = "1.6.1", features = [ "macros", "rt-multi-thread" ] }
sqlx = { version = "0.5.7", features = [ "runtime-tokio-native-tls", "postgres" ] }
